--- a/data/food.html
+++ b/data/food.html
@@ -8,30 +8,30 @@
       <th>Old Sell</th>
       <th>New Sell</th>
       <th>Sell %</th>
-      <th>Logic</th>
+      <th>Logic/Gap</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>APPLE</td><td>8.0</td><td><strong>11.12</strong></td><td>39.0%</td><td>6.4</td><td><strong>6.78</strong></td><td>5.9%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>BAKED_POTATO</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>COOKED_BEEF</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>COOKED_CHICKEN</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>COOKED_MUTTON</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>COOKED_PORKCHOP</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>COOKED_RABBIT</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>BEEF</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>CHICKEN</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUTTON</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>PORKCHOP</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>BREAD</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>RABBIT</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>BEETROOT_SOUP</td><td>44.0</td><td><strong>61.16</strong></td><td>39.0%</td><td>35.2</td><td><strong>37.31</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>CAKE</td><td>85.0</td><td><strong>118.15</strong></td><td>39.0%</td><td>68.0</td><td><strong>72.07</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>COOKED_SALMON</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>COOKIE</td><td>35.0</td><td><strong>48.65</strong></td><td>39.0%</td><td>28.0</td><td><strong>29.68</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GLISTERING_MELON_SLICE</td><td>343.0</td><td><strong>476.77</strong></td><td>39.0%</td><td>274.4</td><td><strong>290.83</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GLOW_BERRIES</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GOLDEN_CARROT</td><td>343.0</td><td><strong>476.77</strong></td><td>39.0%</td><td>274.4</td><td><strong>290.83</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>HONEY_BOTTLE</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>APPLE</td><td>8.0</td><td><strong>11.12</strong></td><td>39.0%</td><td>6.4</td><td><strong>6.78</strong></td><td>5.9%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>BAKED_POTATO</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>COOKED_BEEF</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>COOKED_CHICKEN</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>COOKED_MUTTON</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>COOKED_PORKCHOP</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>COOKED_RABBIT</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>BEEF</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>CHICKEN</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUTTON</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>PORKCHOP</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>BREAD</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>RABBIT</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>BEETROOT_SOUP</td><td>44.0</td><td><strong>61.16</strong></td><td>39.0%</td><td>35.2</td><td><strong>37.31</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>CAKE</td><td>85.0</td><td><strong>118.15</strong></td><td>39.0%</td><td>68.0</td><td><strong>72.07</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>COOKED_SALMON</td><td>28.0</td><td><strong>38.92</strong></td><td>39.0%</td><td>22.4</td><td><strong>23.74</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>COOKIE</td><td>35.0</td><td><strong>48.65</strong></td><td>39.0%</td><td>28.0</td><td><strong>29.68</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>GLISTERING_MELON_SLICE</td><td>343.0</td><td><strong>476.77</strong></td><td>39.0%</td><td>274.4</td><td><strong>290.83</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>GLOW_BERRIES</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>GOLDEN_CARROT</td><td>343.0</td><td><strong>476.77</strong></td><td>39.0%</td><td>274.4</td><td><strong>290.83</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>HONEY_BOTTLE</td><td>15.0</td><td><strong>20.85</strong></td><td>39.0%</td><td>12.0</td><td><strong>12.72</strong></td><td>6.0%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
   </tbody>
 </table>
