--- a/data/music.html
+++ b/data/music.html
@@ -8,36 +8,29 @@
       <th>Old Sell</th>
       <th>New Sell</th>
       <th>Sell %</th>
-      <th>Logic</th>
+      <th>Logic/Gap</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>MUSIC_DISC_11</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_13</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_5</td><td>945.0</td><td><strong>1313.55</strong></td><td>39.0%</td><td>236.25</td><td><strong>801.27</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_BLOCKS</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_CAT</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_CHIRP</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_CREATOR</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_CREATOR_MUSIC_BOX</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_FAR</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_MALL</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_MELLOHI</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_OTHERSIDE</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_PIGSTEP</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_PRECIPICE</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_RELIC</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_STAL</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_STRAD</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_WAIT</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>MUSIC_DISC_WARD</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>MUSIC_DISC_11</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_13</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_5</td><td>945.0</td><td><strong>1313.55</strong></td><td>39.0%</td><td>236.25</td><td><strong>801.27</strong></td><td>239.2%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_BLOCKS</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_CAT</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_CHIRP</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_CREATOR</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_CREATOR_MUSIC_BOX</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_FAR</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_MALL</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_MELLOHI</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_OTHERSIDE</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_PIGSTEP</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_PRECIPICE</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_RELIC</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_STAL</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_STRAD</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_WAIT</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>MUSIC_DISC_WARD</td><td>75.0</td><td><strong>104.25</strong></td><td>39.0%</td><td>18.75</td><td><strong>63.59</strong></td><td>239.1%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
+    <tr><td>GOAT_HORN</td><td>100.0</td><td><strong>139.0</strong></td><td>39.0%</td><td>25.0</td><td><strong>84.79</strong></td><td>239.2%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
   </tbody>
 </table>
