--- a/data/enchanting.html
+++ b/data/enchanting.html
@@ -8,51 +8,10 @@
       <th>Old Sell</th>
       <th>New Sell</th>
       <th>Sell %</th>
-      <th>Logic</th>
+      <th>Logic/Gap</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4080.44</td><td><strong>4239.5</strong></td><td>3.9%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4068.49</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4081.61</td><td><strong>4239.5</strong></td><td>3.9%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4070.13</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4068.04</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4080.59</td><td><strong>4239.5</strong></td><td>3.9%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4077.04</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4066.98</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4073.0</td><td><strong>4239.5</strong></td><td>4.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4066.44</td><td><strong>4239.5</strong></td><td>4.3%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4072.82</td><td><strong>4239.5</strong></td><td>4.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4074.36</td><td><strong>4239.5</strong></td><td>4.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4076.14</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4068.45</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4081.67</td><td><strong>4239.5</strong></td><td>3.9%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4065.75</td><td><strong>4239.5</strong></td><td>4.3%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4073.07</td><td><strong>4239.5</strong></td><td>4.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4069.28</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4074.73</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4066.1</td><td><strong>4239.5</strong></td><td>4.3%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4075.44</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4068.32</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4071.11</td><td><strong>4239.5</strong></td><td>4.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4067.28</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4075.42</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4070.14</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4078.73</td><td><strong>4239.5</strong></td><td>3.9%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4069.21</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4072.86</td><td><strong>4239.5</strong></td><td>4.1%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4079.15</td><td><strong>4239.5</strong></td><td>3.9%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4077.33</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4075.51</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4078.16</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4070.54</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4065.13</td><td><strong>4239.5</strong></td><td>4.3%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4075.78</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4077.55</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4067.61</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4067.1</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4069.99</td><td><strong>4239.5</strong></td><td>4.2%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4075.86</td><td><strong>4239.5</strong></td><td>4.0%</td><td>39% Hike, 39% Gap</td></tr>
-    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4065.15</td><td><strong>4239.5</strong></td><td>4.3%</td><td>39% Hike, 39% Gap</td></tr>
+    <tr><td>ENCHANTED_BOOK</td><td>5000.0</td><td><strong>6950.0</strong></td><td>39.0%</td><td>4065.15</td><td><strong>4239.5</strong></td><td>4.3%</td><td>Real Data Comparison (Gap: 39.0%)</td></tr>
   </tbody>
 </table>
