--- a/data/workstations.html
+++ b/data/workstations.html
@@ -8,9 +8,10 @@
       <th>Old Sell</th>
       <th>New Sell</th>
       <th>Sell %</th>
-      <th>Logic</th>
+      <th>Logic/Gap</th>
     </tr>
   </thead>
   <tbody>
+    <tr><td>STICK</td><td>1234.0</td><td><strong>1234.0</strong></td><td>0.0%</td><td>123.0</td><td><strong>123.0</strong></td><td>0.0%</td><td>Real Data Comparison (Gap: 90.0%)</td></tr>
   </tbody>
 </table>
