--- a/data/workstations.html
+++ b/data/workstations.html
@@ -1,17 +1,1 @@
-<table>
-  <thead>
-    <tr>
-      <th>Material</th>
-      <th>Old Buy</th>
-      <th>New Buy</th>
-      <th>Buy %</th>
-      <th>Old Sell</th>
-      <th>New Sell</th>
-      <th>Sell %</th>
-      <th>Logic/Gap</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr><td>STICK</td><td>1234.0</td><td><strong>1234.0</strong></td><td>0.0%</td><td>123.0</td><td><strong>123.0</strong></td><td>0.0%</td><td>Real Data Comparison (Gap: 90.0%)</td></tr>
-  </tbody>
-</table>
+<table><thead><tr><th>Material/Info</th><th>Old Buy</th><th>New Buy</th><th>Buy %</th><th>Old Sell</th><th>New Sell</th><th>Sell %</th><th>Logic</th></tr></thead><tbody></tbody></table>
