--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <button onclick="showShop('ores')">Ores</button>
       <button onclick="showShop('farming')">Farming</button>
       <button onclick="showShop('food')">Food</button>
+      
+      <button onclick="showShop('block')">Blocks</button>
       <button onclick="showShop('decoration')">Decoration</button>
       <button onclick="showShop('dyes')">Dyes</button>
       <button onclick="showShop('enchanting')">Enchanting</button>
