--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button onclick="showShop('farming')">Farming</button>
       <button onclick="showShop('food')">Food</button>
       
-      <button onclick="showShop('block')">Blocks</button>
+      <button onclick="showShop('blocks')">Blocks</button>
       <button onclick="showShop('decoration')">Decoration</button>
       <button onclick="showShop('dyes')">Dyes</button>
       <button onclick="showShop('enchanting')">Enchanting</button>
